<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/put1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put1"
            android:textSize="12dp" />

        <Button
            android:id="@+id/put2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put2"
            android:textSize="12dp" />

        <Button
            android:id="@+id/put3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/put3"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get"
            android:textSize="12dp" />

        <Button
            android:id="@+id/dump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dump"
            android:textSize="12dp" />

        <Button
            android:id="@+id/testOtherGuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="clear"
            android:textSize="12dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/output"
            android:scrollbars="vertical"
            android:text=""
            android:textSize="12dp" />
    </ScrollView>

</LinearLayout>